# vllm-detector-adapter

./: .gitignore  Dockerfile  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  nightly-build-and-test.yml
scripts/: copy_script.sh  targeted_pip_install.py  update_vllm_version.py
tests/: conftest.py  test_detector_dispatcher.py  test_http_server.py  test_protocol.py  utils.py
tests/generative_detectors/: test_base.py  test_granite_guardian.py  test_llama_guard.py
vllm_detector_adapter/: api_server.py  detector_dispatcher.py  protocol.py  start_with_tgis_adapter.py  test_detector_dispatcher.py  utils.py
vllm_detector_adapter/generative_detectors/: base.py  granite_guardian.py  llama_guard.py
