[project]
name = "vllm-detector-adapter"
version = "0.6.1"
authors = [
  { name="Gaurav Kumbhat", email="kumbhat.gaurav@gmail.com" },
  { name="Evaline Ju", email="evaline.ju@ibm.com" },
]
description = "A lightweight adapter layer that provides detector APIs on top of vllm"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    "orjson>=3.10.16,<3.11",
]

[project.optional-dependencies]
vllm-tgis-adapter = [
    "vllm-tgis-adapter>=0.7.0,<0.7.1"
]
vllm = [
    # Note: 0.8.4 has a triton bug on Mac
    "vllm @ git+https://github.com/vllm-project/vllm.git@v0.8.3 ; sys_platform == 'darwin'",
    # To accomodate for RCs like 0.8.3.0rc0
    "vllm>0.8.2,<0.8.5 ; sys_platform != 'darwin'",
]

## Dev Extra Sets ##

dev-test = [
    "pytest-asyncio>=0.21.0,<0.24",
    "pytest-cov>=2.10.1,<6.0",
    "pytest-html>=3.1.1,<5.0",
    "pytest>=6.2.5,<8.0",
    "wheel>=0.38.4",
]

dev-fmt = [
    "ruff==0.4.7",
    "pre-commit>=3.0.4,<4.0",
    "pydeps>=1.12.12,<2",
]

[tool.setuptools.packages.find]
where = [""]
include = ["vllm_detector_adapter", "vllm_detector_adapter*"]
