[project]
name = "vllm-detector-adapter"
version = "0.7.6"
authors = [
    { name = "Gaurav Kumbhat", email = "kumbhat.gaurav@gmail.com" },
    { name = "Evaline Ju", email = "evaline.ju@ibm.com" },
]
description = "A lightweight adapter layer that provides detector APIs on top of vllm"
readme = "README.md"
requires-python = ">=3.11"
classifiers = ["Programming Language :: Python :: 3"]

dependencies = ["orjson>=3.10.16,<3.11"]

[project.optional-dependencies]
vllm-tgis-adapter = ["vllm-tgis-adapter>=0.8.0,<0.9.0"]
vllm = [
    # Note: vllm < 0.10.0 has issues with transformers >= 4.54.0
    "vllm @ git+https://github.com/vllm-project/vllm.git@v0.10.0 ; sys_platform == 'darwin'",
    "vllm>=0.10.0,<0.10.1 ; sys_platform != 'darwin'",
]

## Dev Extra Sets ##

dev-test = [
    "pytest-asyncio>=0.21.0,<0.24",
    "pytest-cov>=2.10.1,<6.0",
    "pytest-html>=3.1.1,<5.0",
    "pytest>=6.2.5,<8.0",
    "wheel>=0.38.4",
]

dev-fmt = [
    "ruff==0.4.7",
    "pre-commit>=3.0.4,<4.0",
    "pydeps>=1.12.12,<2"
]

[tool.setuptools.packages.find]
where = [""]
include = [
    "vllm_detector_adapter",
    "vllm_detector_adapter*"
]
